Name:                   hackage-twitter-bot
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Hackage.Twitter.Bot
  Other-Modules:        Hackage.Twitter.Bot.Internal
                       ,Hackage.Twitter.Bot.Acid
                       ,Hackage.Twitter.Bot.Bitly
                       ,Hackage.Twitter.Bot.Types
  Build-Depends:        base >= 4 && < 5
                      , wreq
                      , feed
                      , lens
                      , bytestring
                      , xml
                      , attoparsec
                      , text
                      , time
                      , safe
                      , iso8601-time
                      , old-locale
                      , acid-state
                      , mtl
                      , safecopy
                      , aeson
                      , yaml
                      , twitter-conduit
                      , transformers
                      , authenticate-oauth
                      , network
                      , http-conduit
                      , containers
                      , case-insensitive
                      , transformers-base
                      , resourcet
                      , monad-logger
                      , async

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

executable hackage-twitter-bot-exec
  main-is:              Main.hs
  hs-source-dirs:       src
  Build-Depends:        base
                      , wreq
                      , feed
                      , lens
                      , bytestring
                      , xml
                      , attoparsec
                      , text
                      , time
                      , safe
                      , old-locale
                      , iso8601-time
                      , acid-state
                      , mtl
                      , safecopy
                      , aeson
                      , yaml
                      , twitter-conduit
                      , transformers
                      , authenticate-oauth
                      , network
                      , http-conduit
                      , containers
                      , case-insensitive
                      , transformers-base
                      , resourcet
                      , monad-logger
                      , async

Source-Repository head
  Type:                 git
--  Location:             
